@@ -154,6 +154,7 @@ why.conf
 /examples/programs/mergesort_list/
 /examples/programs/binary_search/
 /examples/programs/same_fringe/
+/examples/programs/quicksort/
 
 # modules
 /modules/string/
