@@ -1,0 +1,4 @@
+
+theory T
+  type t = {| mutable a:int |}
+end
