@@ -1,0 +1,4 @@
+theory T
+  logic f int : int
+  goal g1 : let t = {| f = 1 |} in true
+end
