@@ -1,0 +1,5 @@
+theory T
+  type t = {| a:int; b:int; |}
+  type u = {| c:int; d:int; |}
+  goal g1 : let t = {| a = 1;  c = 2 |} in true
+end
