@@ -1,0 +1,5 @@
+theory Records
+  use import bool.Bool
+  type t = {| a:int; b:bool; |}
+  goal g1 : let t = {| a = 1;  b = 2 |} in true
+end
