@@ -1,0 +1,4 @@
+theory Records
+  type t = {| a:int; b:int |}
+  goal g1 : let t = {| a = 1 |} in true
+end
